ingress/ing.ml-info-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-info-service-com
spec:
  rules:
  - host: ml-info-service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ml-info-api
            port:
              number: 80    # could also use "name: http" instead of "number: 80"
